integration de la page web type dans RoR OK

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,6 +1,6 @@
 /*style.scss*/
 @charset "UTF-8";
-@import url("font-awesome.min.css");
+@import "font-awesome";
 @import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600|Arvo:700");
 
 /*
