--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,18 +8,15 @@
     <!--[if lte IE 8]><script src='<%= asset_path("ie/html5shiv.js") %>'></script><![endif]-->
 
     <!--<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>-->
-    <script src='<%= asset_path("jquery.dropotron.min.js") %>'></script>
     <script src='<%= asset_path("jquery.min.js") %>'></script>
+    <script src='<%= asset_path("jquery.dropotron.min.js") %>'></script>
     <script src='<%= asset_path("skel.min.js") %>'></script>
     <script src='<%= asset_path("skel-layers.min.js") %>'></script>
     <script src='<%= asset_path("init.js.erb") %>'></script>
     <noscript>
-        <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-<!--
-        <link rel="stylesheet" href="css/skel.css" />
-        <link rel="stylesheet" href="css/style.css" />
-        <link rel="stylesheet" href="css/style-desktop.css" />
-        -->
+        <link rel="stylesheet" href='<%= asset_path("skel.css") %>'/>
+        <link rel="stylesheet" href='<%= asset_path("style.css") %>'/>
+        <link rel="stylesheet" href='<%= asset_path("style-desktop.css") %>'/>
     </noscript>
     <!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
     <link rel="icon" type="image/bmp" href='<%= asset_path("favicon.ico") %>'/>
