mise au point des icones

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -20,7 +20,7 @@
                             <li><a href="#">Références clients</a></li>
                         </ul>
                     </li>
-                    <li><a class="icon fa-home" href="#"><span>Offre de service</span></a>
+                    <li><a class="icon fa-rocket" href="#"><span>Offre de service</span></a>
                         <ul>
                             <li><a href="#">Conseil</a>
                                 <ul>
@@ -44,7 +44,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li><a class="icon fa-retweet" href="#"><span>Domaines d'expertise</span></a>
+                    <li><a class="icon fa-diamond" href="#"><span>Domaines d'expertise</span></a>
                         <ul>
                             <li><a href="#">Architecture cloud</a></li>
                             <li><a href="#">Orchestration des services Cloud</a></li>
@@ -55,15 +55,15 @@
                             <li><a href="#">Infrastructure grid</a></li>
                         </ul>
                     </li>
-                    <li><a class="icon fa-sitemap" href="#"><span>Actualités</span></a>
-                    <li><a class="icon fa-sitemap" href="#"><span>Tarifs</span></a>
+                    <li><a class="icon fa-comments-o" href="#"><span>Actualités</span></a>
+                    <li><a class="icon fa-eur" href="#"><span>Tarifs</span></a>
                         <ul>
                             <li><a href="#">Audit</a></li>
                             <li><a href="#">AMOA</a></li>
                             <li><a href="#">Projet</a></li>
                         </ul>
                     </li>
-                    <li><a class="icon fa-sitemap" href="#"><span>FAQ</span></a></li>
+                    <li><a class="icon fa-question-circle" href="#"><span>FAQ</span></a></li>
                 </ul>
             </nav>
 
@@ -155,7 +155,7 @@
                         </header>
                         <p>Laissez vos coordonnées pour être tenu informé du lancement du site</p>
                         <a href="#contactform" onclick="set_visible('contactform');return true;"
-                           class="button icon fa-file">En savoir plus</a>
+                           class="button icon fa-plus-circle">En savoir plus</a>
                     </section>
 
                 </div>
@@ -169,7 +169,7 @@
                         </header>
                         <p>Laissez vos coordonnées pour être tenu informé du lancement du site</p>
                         <a href="#contactform" onclick="set_visible('contactform');return true;"
-                           class="button icon fa-file">En savoir plus</a>
+                           class="button icon fa-plus-circle">En savoir plus</a>
                     </section>
 
                 </div>
@@ -183,7 +183,7 @@
                         </header>
                         <p>Laissez vos coordonnées pour être tenu informé du lancement du site</p>
                         <a href="#contactform" onclick="set_visible('contactform');return true;"
-                           class="button icon fa-file">En savoir plus</a>
+                           class="button icon fa-plus-circle">En savoir plus</a>
                     </section>
 
                 </div>
