--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -615,7 +615,7 @@ h3 {
 	{
 		position: relative;
 		overflow: hidden;
-		background: #fff;
+      background: #878787;
 		color: #fff;
 		text-align: center;
 		border-top: solid 2px #e5e5e5;
