contact intégré dans la page d'accueil OK

--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -11,27 +11,31 @@
         </div>
     <% end %>
 
-    <div class="field">
-        <%= f.label :name %><br>
-        <%= f.text_field :name %>
+    <div class="row 50%">
+        <div class="6u">
+            <%= f.text_field :name, :placeholder => 'Nom' %>
+        </div>
+        <div class="6u">
+            <%= f.text_field :email, :placeholder => 'Email' %>
+        </div>
     </div>
-    <div class="field">
-        <%= f.label :company %><br>
-        <%= f.text_field :company %>
+    <div class="row 50%">
+        <div class="6u">
+            <%= f.text_field :company, :placeholder => 'Société' %>
+        </div>
+        <div class="6u">
+            <%= f.text_field :phone, :placeholder => 'Téléphone' %>
+        </div>
     </div>
-    <div class="field">
-        <%= f.label :phone %><br>
-        <%= f.text_field :phone %>
+    <div class="row 50%">
+        <div class="12u">
+            <%= f.text_area :message, :placeholder => 'Message' %>
+        </div>
     </div>
-    <div class="field">
-        <%= f.label :email %><br>
-        <%= f.text_field :email %>
-    </div>
-    <div class="field">
-        <%= f.label :message %><br>
-        <%= f.text_field :message %>
-    </div>
-    <div class="actions">
-        <%= f.submit %>
+    <div class="row 50%">
+        <div class="12u">
+            <a href="javascript:{}" onclick="this.submit(); return false;" class="form-button-submit button icon fa-envelope">Envoyer</a>
+        </div>
     </div>
 <% end %>
+
