--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -29,7 +29,7 @@
     </div>
     <div class="row 50%">
         <div class="12u">
-            <%= f.text_area :message, :placeholder => 'Message' %>
+            <%= f.text_area :content, :placeholder => 'Message' %>
         </div>
     </div>
     <div class="row 50%">
