--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -21,7 +21,7 @@
             <td><%= contact.company %></td>
             <td><%= contact.phone %></td>
             <td><%= contact.email %></td>
-            <td><%= contact.message %></td>
+            <td><%= contact.content %></td>
             <td><%= link_to 'Show', contact %></td>
             <td><%= link_to 'Edit', edit_contact_path(contact) %></td>
             <td><%= link_to 'Destroy', contact, method: :delete, data: {confirm: 'Are you sure?'} %></td>
