--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -22,7 +22,7 @@
 
 <p>
     <strong>Message:</strong>
-    <%= @contact.message %>
+    <%= @contact.content %>
 </p>
 
 <%= link_to 'Edit', edit_contact_path(@contact) %> |
