--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,3 +1,7 @@
-<h1>Contacts#new</h1>
-<%= render 'form' %>
-<p>Find me in app/views/contacts/new.html.erb</p>
+<div class="homepage">
+    <div id="contact-wrapper">
+        <%= render 'form' %>
+        <br>
+        <%= link_to "Annuler", root_url, :class => "form-button-submit button icon fa-envelope" %>
+    </div>
+</div>
