--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -33,7 +33,7 @@
     </div>
     <div class="row 50%">
         <div class="12u">
-            <!--      < f.label :content, "message" > -->
+            <%= f.label :content, "message" %>
             <%= f.text_area :content, :placeholder => 'Message' %>
         </div>
     </div>
