--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,108 +9,9 @@
 
             <p><strong>Cabinet de conseil IT indépendant</strong></p>
             <!-- Nav -->
-            <nav id="nav">
-                <ul>
-                    <li><a class="icon fa-home" href="#"><span>Société</span></a>
-                        <ul>
-                            <li><a href="#">Historique</a></li>
-                            <li><a href="#">Notre équipe</a></li>
-                            <li><a href="#">Localisation</a></li>
-                            <li><a href="#">Quelques chiffres</a></li>
-                            <li><a href="#">Références clients</a></li>
-                        </ul>
-                    </li>
-                    <li><a class="icon fa-rocket" href="#"><span>Offre de service</span></a>
-                        <ul>
-                            <li><a href="#">Conseil</a>
-                                <ul>
-                                    <li><a href="#">Feuille de route technologique</a></li>
-                                    <li><a href="#">Audit des services d'infrastructure</a></li>
-                                    <li><a href="#">Audit du PRI/PCI du SI</a></li>
-                                    <li><a href="#">AMOA</a></li>
-                                    <li><a href="#">Optimisation de l'exploitation</a></li>
-                                    <li><a href="#">Sécurité</a></li>
-                                    <li><a href="#">Catalogue de services IT</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#">Intégration, conduite du changement</a>
-                                <ul>
-                                    <li><a href="#">Gestion de projet</a></li>
-                                    <li><a href="#">Architecture technique</a></li>
-                                    <li><a href="">Intégration de solutions technologiques</a></li>
-                                    <li><a href="#">Support technique niveau 2</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li><a class="icon fa-diamond" href="#"><span>Domaines d'expertise</span></a>
-                        <ul>
-                            <li><a href="#">Architecture cloud</a></li>
-                            <li><a href="#">Orchestration des services Cloud</a></li>
-                            <li><a href="#">Stockage et sauvegarde</a></li>
-                            <li><a href="#">LAN datacenter</a></li>
-                            <li><a href="#">Bases de données, big data</a></li>
-                            <li><a href="#">Communications unifiées</a></li>
-                            <li><a href="#">Infrastructure grid</a></li>
-                        </ul>
-                    </li>
-                    <li><a class="icon fa-comments-o" href="#"><span>Actualités</span></a>
-                    <li><a class="icon fa-eur" href="#"><span>Tarifs</span></a>
-                        <ul>
-                            <li><a href="#">Audit</a></li>
-                            <li><a href="#">AMOA</a></li>
-                            <li><a href="#">Projet</a></li>
-                        </ul>
-                    </li>
-                    <li><a class="icon fa-question-circle" href="#"><span>FAQ</span></a></li>
-                </ul>
-            </nav>
-
+            <%= render 'menus/menus' %>
         </div>
     </div>
-    <!-- contact -->
-    <div id="contact-wrapper">
-        <div id="contact" class="container">
-            <header>
-                <strong>
-                    <% if flash[:notice] %><%= flash[:notice] %>
-                    <% else %>
-                        <a href="#" onclick="toggle_visibility('contactform');" class="icon fa-envelope"> Nous
-                            contacter (click here)</a></strong>
-                    <% end %>
-            </header>
-            <div class="row" id="contactform">
-                <div class="6u">
-                    <section>
-                        <%= render "contacts/form" %>
-                    </section>
-                </div>
-                <div class="6u">
-                    <section>
-                        <div class="row">
-                            <div class="12u">
-                                <ul class="icons">
-                                    <li class="icon fa-home">
-                                        Siège social : 18, rue des Fougères<br/>
-                                        22700 Perros-Guirec<br/>
-                                        FRANCE
-                                    </li>
-                                    <li class="icon fa-phone">
-                                        +33 9 72 22 47 31
-                                    </li>
-                                    <li class="icon fa-envelope">
-                                        <a href="mailto: contact@isitix.com">contact@isitix.com</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </section>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!-- Features -->
     <div id="features-wrapper">
         <section id="features" class="container">
