ajout de la version short des articles en dynamique

--- a/app/views/menus/_menus.html.erb
+++ b/app/views/menus/_menus.html.erb
@@ -1,6 +1,6 @@
 <nav id="nav">
     <ul>
-        <% @top_menus.each do |menu| %>
+        <% top_menus.each do |menu| %>
             <li><a class="<%= menu.icon %>" href="#"><span><%= menu.name %></span></a>
                 <% if menu.menus.count > 0 %>
                     <ul>
