layout ok avant mise en place des liens

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -20,7 +20,7 @@
                     forte plus-value dans vos projets
                 </h2>
             </header>
-            <%= render partial: 'articles/horizontallist', locals: {articles: @articles} %>
+            <%= render partial: 'articles/horizontalshort', locals: {articles: @articles} %>
         </section>
     </div>
 
