--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,63 +7,7 @@
 
         <p><strong>Cabinet de conseil IT indépendant</strong></p>
         <!-- Nav -->
-        <nav id="nav">
-            <ul>
-                <li><a class="icon fa-home" href="#"><span>Société</span></a>
-                    <ul>
-                        <li><a href="#">Historique</a></li>
-                        <li><a href="#">Notre équipe</a></li>
-                        <li><a href="#">Localisation</a></li>
-                        <li><a href="#">Quelques chiffres</a></li>
-                        <li><a href="#">Références clients</a></li>
-                    </ul>
-                </li>
-                <li><a class="icon fa-rocket" href="#"><span>Offre de service</span></a>
-                    <ul>
-                        <li><a href="#">Conseil</a>
-                            <ul>
-                                <li><a href="#">Feuille de route technologique</a></li>
-                                <li><a href="#">Audit des services d'infrastructure</a></li>
-                                <li><a href="#">Audit du PRI/PCI du SI</a></li>
-                                <li><a href="#">AMOA</a></li>
-                                <li><a href="#">Optimisation de l'exploitation</a></li>
-                                <li><a href="#">Sécurité</a></li>
-                                <li><a href="#">Catalogue de services IT</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">Intégration, conduite du changement</a>
-                            <ul>
-                                <li><a href="#">Gestion de projet</a></li>
-                                <li><a href="#">Architecture technique</a></li>
-                                <li><a href="">Intégration de solutions technologiques</a></li>
-                                <li><a href="#">Support technique niveau 2</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li><a class="icon fa-diamond" href="#"><span>Domaines d'expertise</span></a>
-                    <ul>
-                        <li><a href="#">Architecture cloud</a></li>
-                        <li><a href="#">Orchestration des services Cloud</a></li>
-                        <li><a href="#">Stockage et sauvegarde</a></li>
-                        <li><a href="#">LAN datacenter</a></li>
-                        <li><a href="#">Bases de données, big data</a></li>
-                        <li><a href="#">Communications unifiées</a></li>
-                        <li><a href="#">Infrastructure grid</a></li>
-                    </ul>
-                </li>
-                <li><a class="icon fa-comments-o" href="#"><span>Actualités</span></a>
-                <li><a class="icon fa-eur" href="#"><span>Tarifs</span></a>
-                    <ul>
-                        <li><a href="#">Audit</a></li>
-                        <li><a href="#">AMOA</a></li>
-                        <li><a href="#">Projet</a></li>
-                    </ul>
-                </li>
-                <li><a class="icon fa-question-circle" href="#"><span>FAQ</span></a></li>
-            </ul>
-        </nav>
+        <%= render partial: 'menus/menus', locals: {top_menus: @menus} %>
 
     </div>
 </div>
@@ -126,80 +70,8 @@
             </div>
             <!-- Sidebar -->
             <div id="sidebar" class="4u">
-
                 <!-- Excerpts -->
-                <section>
-                    <ul class="divided">
-                        <li>
-
-                            <!-- Excerpt -->
-                            <article class="box excerpt">
-                                <header>
-                                    <h3><a href="#">Stratégie Big Data</a></h3>
-                                </header>
-                                <p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-                                    suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem
-                                    dolore.</p>
-                                <ul class="actions">
-                                    <li><a href="#" class="button icon fa-file">Learn More</a></li>
-                                </ul>
-
-                            </article>
-
-                        </li>
-                        <li>
-
-                            <!-- Excerpt -->
-                            <article class="box excerpt">
-                                <header>
-                                    <h3><a href="#">Les enjeux d’un Cloud hybride</a></h3>
-                                </header>
-                                <p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-                                    suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem
-                                    dolore.</p>
-                                <ul class="actions">
-                                    <li><a href="#" class="button icon fa-file">Learn More</a></li>
-                                </ul>
-
-                            </article>
-
-                        </li>
-                        <li>
-
-                            <!-- Excerpt -->
-                            <article class="box excerpt">
-                                <header>
-                                    <h3><a href="#">Les infrastructures hyperconvergées</a></h3>
-                                </header>
-                                <p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-                                    suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem
-                                    dolore.</p>
-                                <ul class="actions">
-                                    <li><a href="#" class="button icon fa-file">Learn More</a></li>
-                                </ul>
-
-                            </article>
-
-                        </li>
-                        <li>
-
-                            <!-- Excerpt -->
-                            <article class="box excerpt">
-                                <header>
-                                    <h3><a href="#">Quel protocole de transport pour mon SAN ?</a></h3>
-                                </header>
-                                <p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-                                    suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem
-                                    dolore.</p>
-                            </article>
-                            <ul class="actions">
-                                <li><a href="#" class="button icon fa-file">Learn More</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </section>
-
-
+                <%= render partial: 'articles/verticalexcerpt', locals: {articles: @articles} %>
             </div>
         </div>
     </div>
