--- a/app/views/layouts/articles.html.erb
+++ b/app/views/layouts/articles.html.erb
@@ -45,7 +45,7 @@
     <div id="header" class="container">
 
         <!-- Logo -->
-        <h1 id="logo"><a href="#">ISITIX</a></h1>
+        <h1 id="logo"><%= link_to 'ISITIX', root_path %></h1>
 
         <p><strong>Cabinet de conseil IT indépendant</strong></p>
         <!-- Nav -->
