--- a/app/views/articles/_excerpt.html.erb
+++ b/app/views/articles/_excerpt.html.erb
@@ -7,6 +7,6 @@
         <%= article.small_content %>
     </p>
     <ul class="actions">
-        <li><a href="#" class="button icon fa-file">En savoir plus</a></li>
+        <li><%= link_to 'En savoir plus', article, class: "button icon fa-file" %></li>
     </ul>
 </article>
