--- a/app/views/articles/_excerpt.html.erb
+++ b/app/views/articles/_excerpt.html.erb
@@ -1,7 +1,7 @@
 <!-- Excerpt -->
 <article class="box excerpt">
     <header>
-        <h3><a href="#"><%= article.title %></a></h3>
+        <h3><%= link_to article.title, article %></a></h3>
     </header>
     <p>
         <%= article.small_content %>
