menus modifies ok

--- a/app/views/layouts/articles.html.erb
+++ b/app/views/layouts/articles.html.erb
@@ -49,7 +49,7 @@
 
         <p><strong>Cabinet de conseil IT indépendant</strong></p>
         <!-- Nav -->
-        <%= render partial: 'menus/menus', locals: {top_menus: @menus} %>
+        <%= render partial: 'menus', locals: {top_articles: @toparticles} %>
 
     </div>
 </div>
