--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
                 forte plus-value dans vos projets
             </h2>
         </header>
-        <%= render partial: 'articles/horizontalshort', locals: {articles: @articles} %>
+        <%= render partial: 'articles/horizontalshort', locals: {articles: @toparticles} %>
     </section>
 </div>
 
