--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -51,7 +51,7 @@
 
             <p><strong>Cabinet de conseil IT indépendant</strong></p>
             <!-- Nav -->
-            <%= render partial: 'menus/menus', locals: {top_menus: @menus} %>
+            <%= render partial: 'articles/menus', locals: {top_articles: @toparticles} %>
         </div>
     </div>
 
