--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,6 +13,14 @@
                     </header>
                     <span class="image featured"><%= image_tag(@article.first_picture) %></span>
                     <%= @article.big_content.html_safe %>
+                    <% @article.articles.each do |article2| %>
+                        <h3><%= article2.title %></h3>
+                        <%= article2.big_content.html_safe %>
+                        <%= article2.articles.each do |article3| %>
+                            <h4><%= article3.title %></h4>
+                            <%= article3.big_content.html_safe %>
+                        <% end %>
+                    <% end %>
                 </article>
 
             </div>
