--- a/app/views/articles/_excerpt.html.erb
+++ b/app/views/articles/_excerpt.html.erb
@@ -9,4 +9,4 @@
     <ul class="actions">
         <li><%= link_to 'En savoir plus', article, class: "button icon fa-file" %></li>
     </ul>
-</article>l
+</article>
