premiere version ok hors contenu a completer

--- a/app/assets/stylesheets/style-1000px.scss
+++ b/app/assets/stylesheets/style-1000px.scss
@@ -9,119 +9,100 @@
 /* Basic                                                                         */
 /*********************************************************************************/
 
-	body
-	{
-		min-width: 960px;
-	}
+body {
+  min-width: 960px;
+}
 
-	body,input,textarea,select
-	{
-		line-height: 1.5em; /* 1.75 */
-		font-size: 12pt;
-	}
+body, input, textarea, select {
+  line-height: 1.5em; /* 1.75 */
+  font-size: 12pt;
+}
 
-	h2
-	{
-		margin: 0 0 1em 0;
-		font-size: 1.3em;
-	}
+h2 {
+  margin-top: 1em;
+  font-size: 2em;
+}
 
-	h3
-	{
-		margin: 0 0 1em 0;
-	}
+h3 {
+  margin-top: 1em;
+}
 
-	h2 br, h3 br, h4 br, h5 br, h6 br
-	{
-		display: none;
-	}
+h2 br, h3 br, h4 br, h5 br, h6 br {
+  display: none;
+}
 
-	/* Image */
+/* Image */
 
-		.image
-		{
-		}
+.image {
+}
 
-			.image.featured
-			{
-				margin: 0 0 2.5em 0;
-			}
-			
+.image.featured {
+  margin: 0 0 1.5em 0;
+}
+
 /*********************************************************************************/
 /* Wrappers                                                                      */
 /*********************************************************************************/
 
-	#header-wrapper
-	{
-	}
+#header-wrapper {
+}
 
-	#features-wrapper
-	{
-		padding: 3em 0 3em 0;
-	}
-	
-	#banner-wrapper
-	{
-		padding: 2em 0 2em 0;
-	}
-	
-	#main-wrapper
-	{
-		padding: 4em 0 4em 0;
-	}
-	
-	#footer-wrapper
-	{
-		padding: 3em 0 6em 0;
-	}
+#features-wrapper {
+  padding: 3em 0 3em 0;
+}
+
+#banner-wrapper {
+  padding: 2em 0 2em 0;
+}
+
+#main-wrapper {
+  padding: 1em 0 4em 0;
+}
+
+#footer-wrapper {
+  padding: 3em 0 6em 0;
+}
 
 /*********************************************************************************/
 /* Header                                                                        */
 /*********************************************************************************/
 
-	#header
-	{
-		padding: 7em 0 3em 0;
-	}
+#header {
+  padding: 7em 0 3em 0;
+}
 
-		#header h1
-		{
-			font-size: 2em;
-		}
-		
-		#header p
-		{
-			margin: 1.5em 0 0 0;
-		}
+#header h1 {
+  font-size: 2em;
+}
+
+#header p {
+  margin-bottom: 1em;
+}
 
 /*********************************************************************************/
 /* Nav                                                                           */
 /*********************************************************************************/
 
-	#nav
-	{
-	}
+#nav {
+}
 
-		#nav > ul > li
-		{
-			padding-right: 1.25em;
-		}
+#nav > ul > li {
+  padding-right: 1.25em;
+}
 
 /*********************************************************************************/
 /* Banner                                                                        */
 /*********************************************************************************/
-	
-	#banner
-	{
-		padding: 2em 0 2em 0;
-	}
-		
+
+#banner {
+  padding: 2em 0 2em 0;
+}
+
 /*********************************************************************************/
 /* Copyright                                                                     */
 /*********************************************************************************/
 
-	#copyright
-	{
-		margin-top: 1em;
-		padding-top: 1em;
-	}
+#copyright {
+  margin-top: 1em;
+  padding-top: 1em;
+}
