--- a/app/assets/stylesheets/style-desktop.scss
+++ b/app/assets/stylesheets/style-desktop.scss
@@ -17,18 +17,18 @@
 
 	h2
 	{
-		font-size: 1.3em;
+      font-size: 2em;
 		font-weight: 400;
 		letter-spacing: 4px;
-		margin: 0 0 1.5em 0;
-		line-height: 1.3em;
+      margin-top: 1.5em;
+      line-height: 2em;
 	}
 
 	h3
 	{
 		font-size: 1em;
 		letter-spacing: 2px;
-		margin: 0 0 1.25em 0;
+      margin-top: 1.25em;
 	}
 
 	/* Table */
@@ -124,7 +124,7 @@
 
 	#features-wrapper
 	{
-		padding: 3em 0 3em 0;
+      padding: 1.5em 0 1.5em 0;
 	}
 	
 	#banner-wrapper
@@ -134,7 +134,7 @@
 	
 	#main-wrapper
 	{
-		padding: 6em 0 6em 0;
+      padding: 1em 0 1em 0;
 	}
 	
 	#footer-wrapper
