--- a/app/views/articles/_horizontalshort.html.erb
+++ b/app/views/articles/_horizontalshort.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-    <% articles.first(3).each do |article| %>
+    <% articles.sample(3).each do |article| %>
         <%= render partial: 'articles/short', locals: {article: article} %>
     <% end %>
 </div>
