--- a/app/views/layouts/articles.html.erb
+++ b/app/views/layouts/articles.html.erb
@@ -7,7 +7,7 @@
     <meta name="keywords" content=""/>
     <!--[if lte IE 8]><script src='<%= asset_path("ie/html5shiv.js") %>'></script><![endif]-->
 
-    <!--<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>-->
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <script src='<%= asset_path("jquery.min.js") %>'></script>
     <script src='<%= asset_path("jquery.dropotron.min.js") %>'></script>
     <script src='<%= asset_path("skel.min.js") %>'></script>
