--- a/app/views/articles/_menus.html.erb
+++ b/app/views/articles/_menus.html.erb
@@ -1,15 +1,15 @@
 <nav id="nav">
     <ul>
         <% top_articles.each do |article| %>
-            <li><%= link_to ("<span>" + article.title + "</span>").html_safe, article, class: article.icon %>
+        <li><%= link_to ("<span>" + t(article.title) + "</span>").html_safe, article, class: article.icon %>
                 <% if article.articles.count > 0 %>
                     <ul>
                         <% article.articles.select { |a| a[:visibility] }.each do |article2| %>
-                            <li><%= link_to article2.title, article2 %>
+                        <li><%= link_to t(article2.title), article2 %>
                             <% if article2.articles.count > 0 %>
                                 <ul>
                                     <% article2.articles.select { |a| a[:visibility] }.each do |article3| %>
-                                        <li><%= link_to article3.title, article3 %></li>
+                                    <li><%= link_to t(article3.title), article3 %></li>
                                     <% end %>
                                 </ul>
                             <% end %>
