--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@contact) do |f| %>
     <% if @contact.errors.any? %>
         <div id="error_explanation">
-            <h2>Votre demande de contact comporte des erreurs :</h2>
+          <h2><%= t 'error' %></h2>
 
             <ul>
                 <% @contact.errors.full_messages.each do |message| %>
@@ -13,33 +13,33 @@
 
     <div class="row 50%">
         <div class="6u">
-            <%= f.label :name, "nom" %>
-            <%= f.text_field :name, :placeholder => 'Nom' %>
+          <%= f.label :name, t('name') %>
+          <%= f.text_field :name, :placeholder => t('name') %>
         </div>
         <div class="6u">
-            <%= f.label :email, "email" %>
-            <%= f.text_field :email, :placeholder => 'Email' %>
+          <%= f.label :email, t('email') %>
+          <%= f.text_field :email, :placeholder => t('email') %>
         </div>
     </div>
     <div class="row 50%">
         <div class="6u">
-            <%= f.label :company, "société" %>
-            <%= f.text_field :company, :placeholder => 'Société' %>
+          <%= f.label :company, t('company') %>
+          <%= f.text_field :company, :placeholder => t('company') %>
         </div>
         <div class="6u">
-            <%= f.label :phone, "téléphone" %>
-            <%= f.text_field :phone, :placeholder => 'Téléphone' %>
-        </div>
-    </div>
-    <div class="row 50%">
-        <div class="12u">
-            <%= f.label :content, "message" %>
-            <%= f.text_area :content, :placeholder => 'Message' %>
+          <%= f.label :phone, t('phone') %>
+          <%= f.text_field :phone, :placeholder => t('phone') %>
         </div>
     </div>
     <div class="row 50%">
         <div class="12u">
-            <a href="javascript:{}" onclick="this.submit(); return false;" class="form-button-submit button icon fa-envelope">Envoyer</a>
+          <%= f.label :content, t('message') %>
+          <%= f.text_area :content, :placeholder => t('message') %>
+        </div>
+    </div>
+    <div class="row 50%">
+        <div class="12u">
+          <a href="javascript:{}" onclick="this.submit(); return false;" class="form-button-submit button icon fa-envelope"><%= t 'send' %></a>
         </div>
     </div>
 <% end %>
