--- a/app/views/articles/_excerpt.html.erb
+++ b/app/views/articles/_excerpt.html.erb
@@ -1,12 +1,12 @@
 <!-- Excerpt -->
 <article class="box excerpt">
     <header>
-        <h3><%= link_to article.title, article %></a></h3>
+      <h3><%= link_to t(article.title), article %></a></h3>
     </header>
     <p>
-        <%= article.small_content %>
+      <%= t(article.small_content) %>
     </p>
     <ul class="actions">
-        <li><%= link_to 'En savoir plus', article, class: "button icon fa-file" %></li>
+      <li><%= link_to t('more'), article, class: "button icon fa-file" %></li>
     </ul>
 </article>
