--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ISITIX : partenaire de votre infrastructure informatique</title>
+  <title><%= t 'page_title' %></title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
@@ -35,7 +35,7 @@
             <!-- Logo -->
             <h1 id="logo"><%= link_to 'ISITIX', root_path %></h1>
 
-            <p><strong>Cabinet de conseil IT indépendant</strong></p>
+          <p><strong><%= t 'title' %></strong></p>
             <!-- Nav -->
             <%= render partial: 'articles/menus', locals: {top_articles: @toparticles} %>
         </div>
@@ -46,16 +46,55 @@
     <div id="banner-wrapper">
         <div class="inner">
             <section id="banner" class="container">
-                <p>Nous vous conseillons avec pragmatisme en toute indépendance.</p>
+              <p><%= t 'motto2' %></p>
             </section>
         </div>
     </div>
-
+  <!-- contact -->
+  <div id="contact-wrapper">
+    <div id="contact" class="container">
+      <header>
+        <strong>
+          <% if flash[:notice] %><%= flash[:notice] %>
+          <% else %>
+            <a id="contactbutton" href="#" class="icon fa-envelope"><%= t 'contact_us' %></a></strong>
+          <% end %>
+          </header>
+      <div class="row" id="contactform">
+        <div class="6u">
+          <section>
+            <%= render "contacts/form" %>
+          </section>
+        </div>
+        <div class="6u">
+          <section>
+            <div class="row">
+              <div class="12u">
+                <ul class="icons">
+                  <li class="icon fa-home">
+                    <%= t 'head_office' %> : 18, rue des Fougères<br/>
+                    22700 Perros-Guirec<br/>
+                    FRANCE
+                  </li>
+                  <li class="icon fa-phone">
+                    +33 9 72 22 47 31
+                  </li>
+                  <li class="icon fa-envelope">
+                    <a href="mailto: contact@isitix.com">contact@isitix.com</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
+    </div>
+  </div>
     <!-- Footer -->
     <!--<div id="footer-wrapper">-->
     <div id="copyright" class="container">
         <ul class="links">
-            <li>&copy; ISITIX. Tous droits réservés.</li>
+          <li><%= t 'copyright__html' %></li>
             <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
         </ul>
     </div>
