--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,7 +2,7 @@
 <div id="features-wrapper">
     <section id="features" class="container">
         <header>
-            <h2>U<%= t 'motto' %>
+            <h2><%= t 'motto' %>
             </h2>
         </header>
         <%= render partial: 'articles/horizontalshort', locals: {articles: @toparticles} %>
