--- a/app/views/articles/_menus.html.erb
+++ b/app/views/articles/_menus.html.erb
@@ -19,6 +19,10 @@
                 <% end %>
             </li>
         <% end %>
+      <!-- courtcircuitage du menu historique article -->
+       <li>
+         <%= link_to(t('blog'), 'http://blog.isitix.com', class: 'icon fa-comments', target: '_blank') %>
+       </li>
       <li>
         <%= link_to(t('language'), "#{request.env['REQUEST_URI'].split('?').first()}?locale=#{t('local')}", class: 'icon fa-globe') %>
       </li>
